--- a/package.json
+++ b/package.json
@@ -1,4 +1,19 @@
 {
-  "name": "application-name",
-  "version": "0.0.1"
+  "name": "node-js-sample",
+  "version": "0.2.0",
+  "description": "npm install",
+  "dependencies": {
+    "angular": "~1.2.28",
+    "angular-route": "~1.2.28",
+    "angular-local-storage": "~0.2.2",
+    "lodash": "^3.10.1",
+    "less": "^2.0.0",
+    "jshint":"^2.0.0"
+  },
+  "author": "Rajesh Veldandi",
+  "license": "MIT",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "jquery": "2.1.1"
+  }
 }
