--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "angular": "~1.2.28",
     "angular-route": "~1.2.28",
+    "angular-ui-router":"~0.2.15",
     "angular-local-storage": "~0.2.2",
     "lodash": "^3.10.1",
     "less": "^2.0.0",
